--- a/css/main.css
+++ b/css/main.css
@@ -105,20 +105,22 @@ header, footer {
   flex-flow: row wrap;
 }
 
+header {
+  padding: 15px 0;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-}
-
-header figure {
-
-
+  margin: 0;
 }
 
 .header-divider {
-
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -126,16 +128,15 @@ header nav {
   justify-content:space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
 
-header nav li {
-
-}
 
 /*Main Hero Area*/
 
@@ -152,19 +153,12 @@ aside {
   flex-flow: row wrap;
 }
 
-.form-description {
-
-}
-
-.form {
-
-}
+/*Features*/
 
 .features {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-
 }
 
 .features .features-items {
@@ -174,13 +168,20 @@ aside {
   flex-flow: row wrap;
 }
 
-article {
-
+.features h2 {
+  margin-bottom: 60px;
 }
 
-.features-item-description {
-
+.features article {
+  width: 55%;
+  margin: 30px 0;
 }
+
+.features p {
+  margin: 0;
+}
+
+/*Reviews*/
 
 .reviews {
   display: flex;
@@ -188,14 +189,28 @@ article {
   flex-flow: row wrap;
 }
 
-.reviews-example {
+.reviews h2 {
+  margin-bottom: 40px;
+}
 
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
 
 /*Footer*/
 
 footer {
+  flex-direction: column;
+}
 
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
 }
 
 footer .social-media {
@@ -205,8 +220,8 @@ footer .social-media {
 
 }
 
-.contact {
-
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -219,8 +234,8 @@ footer .social-icons a {
 
 }
 
-.copyright {
-
+footer .copyright {
+  margin: 20px 0;
 }
 
 
@@ -234,10 +249,6 @@ footer .social-icons a {
   flex-flow: row wrap;
 }
 
-.map {
-
-}
-
 .contact-section {
   display: flex;
   justify-content: center;
@@ -245,8 +256,8 @@ footer .social-icons a {
   flex-flow: row wrap;
 }
 
-.contact-section .contact-content {
-
+.contact-section p {
+  margin: 0px;
 }
 
 /*FAQ PAGE*/
@@ -264,13 +275,16 @@ footer .social-icons a {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
 }
 
-.faq .faq-content {
-
+.faq h2 {
+    margin-bottom: 40px;
 }
 
-
+.faq-content {
+  margin-bottom: 50px;
+}
 
 
 
