--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ textarea {
    body {
      font-family: 'Open Sans', sans-serif;
      font-size: 1em;
+     color: #e2e3ed;
      text-align: left;
    }
 
@@ -122,12 +123,14 @@ textarea {
    h2 {
      font-family: 'Poppins', sans-serif;
      font-size: 1.875em;
+     font-weight: 500;
    }
 
    h3,
    h4 {
      font-family: 'Poppins', sans-serif;
      font-size: 1.125em;
+     font-weight: normal;
      margin: 20px 0;
    }
 
@@ -155,6 +158,7 @@ textarea {
 /* -------------------- Base Header - Footer Styles -------------------- */
 
 header, footer {
+  background-color: #202322;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -171,26 +175,35 @@ header .content-wrapper {
   align-items: center;
   flex-flow: row wrap;
   margin: 0;
+  text-align: center;
 }
 
 .header-divider {
+  background: #3a3a3a;
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
 }
 
 header nav {
+  width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
   display: flex;
   justify-content:space-around;
   align-items: center;
   flex-flow: row wrap;
-  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
   width: 100%;
+}
+
+header nav ul li {
+  font-size: 1.125em;
 }
 
 
@@ -202,11 +215,41 @@ header nav ul {
   flex-flow: row wrap;
 }
 
+.hero-area h1 {
+  font-size: 2.25em;
+}
+
 aside {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+aside .form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /*Features*/
@@ -235,11 +278,13 @@ aside {
 
 .features p {
   margin: 0;
+  text-align: center;
 }
 
 /*Reviews*/
 
 .reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -247,6 +292,7 @@ aside {
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -258,6 +304,7 @@ aside {
 
 footer {
   flex-direction: column;
+    text-align: center;
 }
 
 footer p {
@@ -284,10 +331,13 @@ footer .social-icons {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-flow: row wrap;
+  list-style: none;
+
 }
 
 footer .social-icons a {
-
+  display: inline-block;
 }
 
 footer .copyright {
@@ -299,6 +349,7 @@ footer .copyright {
 /*ABOUT PAGE*/
 
 .mission {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -306,6 +357,7 @@ footer .copyright {
 }
 
 .contact-section {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -319,6 +371,7 @@ footer .copyright {
 /*FAQ PAGE*/
 
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -335,13 +388,17 @@ footer .copyright {
 
 .faq h2 {
     margin-bottom: 40px;
+    line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px;
 }
 
-
+.faq-content h4 {
+  line-height: 1.333;
+  font-weight: 700;
+}
 
 /* ==========================================================================
    Helper classes
