--- a/css/main.css
+++ b/css/main.css
@@ -639,6 +639,10 @@ footer .copyright {
     width: 40%;
   }
 
+  .map figure {
+    padding-bottom: 45.5%;
+  }
+
   .contact-section .content-wrapper h2 {
     width: 80%;
   }
@@ -709,6 +713,10 @@ footer .copyright {
      .mission h2,
      .contact-section .content-wrapper h2 {
          width: 100%;
+     }
+
+     .map figure {
+       padding-bottom: 37.5%;
      }
 
      .contact-section .content-wrapper h2 {
